<resources>
    <string name="app_name">Restream</string>
    <!--    <integer name="com_vk_sdk_AppId">51875512</integer>-->
    <integer name="com_vk_sdk_AppId">3856165</integer>
    <string name="email">Электронная почта</string>
    <string name="pass">Пароль</string>
    <string name="restorePass">Восстановить пароль</string>
    <string name="restorePass2">Восстановить</string>
    <string name="back">Назад</string>

    <string name="come_in">Войти</string>
    <string name="no_acc_text">Нет аккаунта?</string>
    <string name="has_acc_text">Есть аккаунт?</string>
    <string name="register"><font fgcolor="#B223CA">Зарегистрируйтесь\n</font></string>
    <string name="login_in_acc"><font fgcolor="#B223CA">Войдите в личный кабинет</font></string>
    <string name="or_login_social_networks"> или войдите через соцсети:</string>
    <string name="or_registr_social_networks"> или зарегистрируйтесь через соцсети:</string>
    <string name="pass_confirmation">Подтверждение пароля</string>
    <string name="agreement">Я соглашаюсь с условиями</string>
    <string name="public_offer"><font fgcolor="#B223CA">Публичной Оферты</font></string>
    <string name="register2"><font fgcolor="#FFFFFF">Зарегистрироваться</font></string>

    <string name="incorrect_email">Некорректный e-mail</string>
    <string name="incorrect_pass">В пароле должно быть от 8 символов</string>
    <string name="incorrect_confirmpass">Пароли должны совпадать</string>
    <string name="incorrect_pass2">Некорректный пароль</string>


    <string name="confirmMail">Подтверждение почты</string>
    <string name="about_spam">Если Вы не получили письмо, проверьте папку \"Спам\" или попробуйте еще раз.</string>
    <string name="come_in_acc">Войти в аккаунт</string>
    <string name="in_your_email">На вашу почту </string>
    <string name="letter_sent">было отправлено письмо, с ссылкой для подтверждения аккаунта.</string>

    <string name="error">Упс! Ошибка! Попробуйте снова…</string>
    <string name="wait">Подождите…</string>
    <string name="user_exists">Учётная запись с таким email уже существует</string>

    <string name="input_your_email">Введите email, который вы использовали при регистрации</string>

    <string name="instructions_sent">Инструкции по восстановлению пароля были отправлены на указанную почту</string>

    <string name="wrong_email_or_pass">Неверный Email или пароль.</string>

    <string name="register_or_login">Зарегистрируйтесь или войдите снова!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="plan_broadcast">Запланировать эфир</string>

    <string name="hello">Привет, рестример!</string>
    <string name="read">Прочти</string>
    <string name="instructions"><u>инструкцию</u></string>
    <string name="begin_work">по началу работы</string>
    <string name="with_сab">с кабинетом</string>
    <string name="tariff_plan">Тарифный план</string>
    <string name="days_until_subscription">Дней до окончания подписки</string>
    <string name="home">Главная</string>

    <string name="begin_broadcast">Начните эфир сейчас</string>
    <string name="in_broadcast">В ЭФИР!</string>
    <string name="name_broadcast">Название эфира</string>
    <string name="my_tariff">Мой тариф</string>
    <string name="broadcasts">Эфиры</string>

    <string name="view_archive">Смотреть архив</string>
    <string name="add_broadcast">Создать эфир</string>
    <string name="name">Название</string>
    <string name="date">Дата</string>
    <string name="time_begin">Время начала</string>
    <string name="actions">Действия</string>

</resources>