<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_home"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Home">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="347dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="347dp"
        android:layout_height="198dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/greetings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingEnd="40dp"
            android:text="@string/hello"
            android:textAppearance="@style/hello"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-224dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/read"
            android:textAppearance="@style/read_instr"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/hello" />

        <TextView
            android:id="@+id/instruct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-77dp"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:gravity="start"
            android:text="@string/instructions"
            android:textAppearance="@style/read_instr"

            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/hello" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:text="@string/begin_work"
            android:textAppearance="@style/read_instr"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.825"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/hello" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:text="@string/with_сab"
            android:textAppearance="@style/read_instr"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="24dp"
            android:gravity="start"
            android:text="@string/tariff_plan"
            android:textAppearance="@style/tariff_plan"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.386"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/infinity"
            android:layout_width="31dp"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/infinity"
            android:gravity="start"
            android:text=""
            android:textAppearance="@style/tariff_plan"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textview8"
            android:layout_width="14dp"
            android:layout_height="23dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="0"
            android:textAppearance="@style/tariff_plan"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/infinity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/days_until_subscription"
            android:textAppearance="@style/tariff_plan"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.647"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="347dp"
        android:layout_height="198dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/startbroadcasting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/beginBroadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:paddingEnd="40dp"
            android:text="@string/begin_broadcast"
            android:textAppearance="@style/begin_broadcast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.141"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameBroadcast"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/inputemail"
            android:ems="10"
            android:hint="@string/name_broadcast"
            android:paddingStart="15dp"
            android:textAppearance="@style/HintTextStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/default_button_selector"
            android:enabled="true"
            android:text="@string/in_broadcast"
            android:textAppearance="@style/come_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameBroadcast" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="347dp"
        android:layout_height="60dp"
        android:layout_marginTop="215dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/schedule_broadcast"
        android:clickable="true"
        android:drawableStart="@drawable/clock_rectangle"
        android:gravity="center"
        android:paddingStart="55dp"
        android:paddingEnd="55dp"
        android:text="@string/plan_broadcast"
        android:textAppearance="@style/plan_broadcast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</FrameLayout>